# quicktime_atoms

./: .gitignore  README.md  pyproject.toml
qtparse/: __main__.py  atom_parsers.py  extract_metadata.py  qt_atoms.py
tests/: test_qtparse.py  test_read_file.py
